all changed files

--- a/pictures/templates/all_images/base.html
+++ b/pictures/templates/all_images/base.html
@@ -9,7 +9,7 @@
     {% if title %}
     <title>{{title}}</title>
     {% else %}
-    <title> My Gallery</title>
+    <title> Beauty is an Expression!</title>
     {% endif %}
 
     {% block styles %}
