--- a/pictures/templates/all_images/base.html
+++ b/pictures/templates/all_images/base.html
@@ -8,7 +8,7 @@
     {% if title %}
     <title>{{title}}</title>
     {% else %}
-    <title> Beauty is an Expression!</title>
+    <title class="text-centre"> Beautiful artwork</title>
     {% endif %}
 
     {% block styles %}
@@ -22,7 +22,7 @@
      
     <div class="container">
         <div class="jumbutron">
-            <h1 style="text-align: center; font-family: 'Great Vibes', cursive;font-size: 50px; color: black;"class='text-center'>La Galería</h1>
+            <h1 style="text-align: center; font-family: 'Great Vibes', cursive;font-size: 50px; color: black;"class='text-center'>Beauty is an Expression</h1>
         </div>
     </div>
     
