--- a/pictures/templates/all_images/photo.html
+++ b/pictures/templates/all_images/photo.html
@@ -11,18 +11,15 @@
       {% for img in image %}
 
       <div class="col-md-4">
-        <a data-toggle="modal" data-target="#{{img.id}}">
+      
           <img style="margin-top:20px; margin-bottom:20px;" src="{{img.image.url}}" alt="Image" height="200"
-            width="300"><br><br>
+            width="300" data-toggle="modal" data-target="#lucy{{img.id}}"><br><br>
         </a>
       </div>
-
-
-      <div id="{{img.id}}" class="modal fade" role="dialog"
+       <!-- modal content -->
+      <div id="lucy{{img.id}}" class="modal fade" role="dialog"
         style="background-color:rgb(47, 61, 61);font-family: monospace;">
         <div class="modal-dialog">
-
-          <!-- Modal content-->
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -33,14 +30,17 @@
               <img src="{{img.image.url}}" alt="Image" width='400' length='500'>
               <p><strong>place: {{img.location}}</strong></p><br>
               <p><strong>category:</strong>{{img.category}}</p>
-              <!-- The button used to copy the text -->
+              <!-- The button used  -->
               <button class="btn btn-success" onclick="imageurl('{{image.id}}-url')">Copy Image Url</button>
-              <input class="form-control input-lg" type="text" value="http://127.0.0.1:8000{{img.image.url}}"
-                id="{{image.id}}-url">
+              <input class="form-control input-lg" type="text" id="{{image.id}}-url">
             </div>
-
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal"
+                style="background-color:rgb(168, 105, 105);color:white;">Close</button>
+            </div>
+          </div>
             <script>
-              //  <!-- scripts doesn't work-->
+              //  <!-- script-->
               function imageurl(element) {
                 var image = document.getElementById(element);
                 image.select();
@@ -48,11 +48,8 @@
                 alert("Copied the link of image: " + image.value);
               }
             </script>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal"
-                style="background-color:rgb(168, 105, 105);color:white;">Close</button>
-            </div>
-          </div>
+           
+          
 
         </div>
       </div>
